--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
         <!-- Replace with your university logo file -->
         <div class="logo-box" aria-label="University logo placeholder">
-          <!-- Example: <img src="assets/wvu-logo.png" alt="West Virginia University" /> -->
+          <img src="assets/wvu-logo.png" alt="West Virginia University" />
           <span class="muted">University logo</span>
         </div>
       </div>
@@ -197,20 +197,19 @@
         <!-- Left column -->
         <aside class="card">
           <div class="photo" aria-label="Profile photo placeholder">
-            <!-- Example: <img src="assets/profile.jpg" alt="Md Fazley Rafy" /> -->
+            <img src="assets/profile.jpg" alt="Md Fazley Rafy" />
             <span class="muted">Your photo</span>
           </div>
 
           <div>
             <div><strong>Email:</strong> <a href="mailto:fazleyrafy.bd@gmail.com">fazleyrafy.bd@gmail.com</a></div>
             <div><strong>Work Email:</strong> <a href="mailto:mr00065@mix.wvu.edu">mr00065@mix.wvu.edu</a></div>
-            <div><strong>Phone:</strong> (+1) 681-350-1352</div>
           </div>
 
           <div class="links" aria-label="Profile links">
-            <a class="pill" href="https://linkedin.com/in/fazley-rafy" target="_blank" rel="noopener">LinkedIn</a>
-            <!-- Replace with your exact Scholar URL if you want -->
-            <a class="pill" href="#" target="_blank" rel="noopener">Google Scholar</a>
+            <a class="pill" href="www.linkedin.com/in/md-fazley-rafy" target="_blank" rel="noopener">LinkedIn</a>
+            <!-- Replace with your Scholar URL if you want -->
+            <a class="pill" href="https://scholar.google.com/citations?user=QO_rPfMAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
             <a class="pill" href="https://orcid.org/0000-0003-3057-9546" target="_blank" rel="noopener">ORCID</a>
           </div>
 
@@ -227,10 +226,19 @@
         <section class="section">
           <h2>About</h2>
           <p>
-            I am a Ph.D. Candidate in <strong>Computer Science</strong> (Jan 2022 – Dec 2026) at <strong>West Virginia University</strong>,
-            working on <strong>operational cyber resilience</strong> for cyber-physical systems in smart grid technologies.
-            My work focuses on cyber-resilient control and testbeds for DER-rich distribution systems, including HIL and co-simulation
-            using tools such as OpenDSS and Typhoon HIL. :contentReference[oaicite:1]{index=1}
+            
+               Md. Fazley Rafy is a power and cyber-physical systems engineer with strong expertise at the intersection of electric power systems, software, and data-driven intelligence. 
+            He earned his Bachelor’s degree in Electrical and Electronic Engineering from the University of Dhaka in 2017 and completed his PhD in Computer Science at West Virginia University 
+            in 2027. His work focuses on smart grid resilience, distributed energy resource (DER) integration, real-time monitoring and control, and cyber-physical security for modern power 
+            distribution systems. He has extensive experience developing and validating hardware-in-the-loop (HIL) and cyber-physical testbeds using platforms such as Typhoon HIL, RTDS, 
+            OpenDSS, PSCAD, and Raspberry Pi–based edge controllers, enabling realistic evaluation of distributed control, communication delays, and cyber-attack scenarios. His research 
+            includes applied machine learning and optimization for voltage control, loss estimation, behind-the-meter disaggregation, battery energy storage management, and anomaly detection, 
+            with a strong emphasis on deployment-relevant solutions for utilities and grid operators. Md. Rafy has contributed to multi-institutional projects funded by DOE and NSF, 
+            collaborating with national laboratories, utilities, and industry partners, and has published extensively in IEEE journals and conferences. He is an IEEE and IEEE Power & Energy 
+            Society member, serves as a reviewer for leading journals, and has been actively involved in professional service and mentoring. Through West Virginia University’s Research 
+            Apprenticeship Program (RAP), he has mentored undergraduate researchers in power systems, industrial control systems, and cyber-physical security, helping bridge academic research 
+            with practical engineering workflows. His professional interests center on translating advanced research into scalable, reliable, and secure energy infrastructure, with a long-term 
+            focus on intelligent, autonomous, and resilient power distribution systems.
           </p>
 
           <h3>Research Interests</h3>
@@ -270,3 +278,4 @@
   </script>
 </body>
 </html>
+
