--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <!-- Replace with your university logo file -->
         <div class="logo-box" aria-label="University logo placeholder">
           <img src="assets/wvu-logo.png" alt="West Virginia University" />
-          <span class="muted">University logo</span>
+          <!-- <span class="muted">University logo</span> -->
         </div>
       </div>
     </div>
@@ -198,7 +198,7 @@
         <aside class="card">
           <div class="photo" aria-label="Profile photo placeholder">
             <img src="assets/profile.jpg" alt="Md Fazley Rafy" />
-            <span class="muted">Your photo</span>
+            <!-- <span class="muted">Your photo</span> -->
           </div>
 
           <div>
@@ -278,4 +278,5 @@
   </script>
 </body>
 </html>
+
 
