--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           </div>
 
           <div class="links" aria-label="Profile links">
-            <a class="pill" href="www.linkedin.com/in/md-fazley-rafy" target="_blank" rel="noopener">LinkedIn</a>
+            <a class="pill" href="https://www.linkedin.com/in/md-fazley-rafy" target="_blank" rel="noopener">LinkedIn</a>
             <!-- Replace with your Scholar URL if you want -->
             <a class="pill" href="https://scholar.google.com/citations?user=QO_rPfMAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
             <a class="pill" href="https://orcid.org/0000-0003-3057-9546" target="_blank" rel="noopener">ORCID</a>
@@ -278,5 +278,6 @@
   </script>
 </body>
 </html>
+
 
 
