Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
           <h3>Quick Links</h3>
           <p class="muted">
-            View my <a href="publications.html">Publications</a> and <a href="projects.html">Projects</a>.
+            View my <a href="publications.html" target="_blank" rel="noopener">Publications</a> and <a href="projects.html" target="_blank" rel="noopener">Projects</a>.
             A PDF version of my CV can be linked from <a href="cv.html">CV</a>.
           </p>
         </section>
@@ -278,6 +278,7 @@
   </script>
 </body>
 </html>
+
 
 
 
