Revise publications.html with detailed entries
Updated the publications page with detailed entries for journals, conferences, book chapters, task force reports, and posters. Added meta description for SEO.

--- a/publications.html
+++ b/publications.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -60,3 +60,242 @@
   </script>
 </body>
 </html>
+ -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Publications • Md Fazley Rafy</title>
+  <meta name="description" content="Publications of Md Fazley Rafy — journals, conferences, book chapters, task force reports, and posters." />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <header class="top">
+    <div class="wrap">
+      <div class="brand">
+        <h1>Md Fazley Rafy</h1>
+        <p>Publications</p>
+      </div>
+      <nav class="nav" aria-label="Primary navigation">
+        <a href="index.html">Home</a>
+        <a class="active" href="publications.html">Publications</a>
+        <a href="projects.html">Projects</a>
+        <a href="cv.html">CV</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="wrap content">
+    <h2>Publications</h2>
+    <p class="muted">
+      Categories below are based on the items listed in my CV (including published, under review, and submitted manuscripts).
+    </p>
+
+    <!-- ====================== JOURNALS ====================== -->
+    <h3>Journals</h3>
+    <ul>
+      <li>
+        J. Adan, <strong>Md Fazley Rafy</strong>, and A. K. Srivastava (2025).
+        <strong>Cyber resilience in solar-rich networked microgrids: A real-time end-to-end DER outage management framework.</strong>
+        <em>IEEE Transactions on Industry Applications</em>. doi: 10.1109/TIA.2025.3625887.
+      </li>
+
+      <li>
+        Partha S. Sarker, <strong>Md Fazley Rafy</strong>, and A. K. Srivastava (2025).
+        <strong>Enabling Cyber-resilient Distribution Systems with DERs: Distributed vs. Centralized Control.</strong>
+        <em>IEEE Transactions on Power Delivery</em>, pp. 1–11. doi: 10.1109/TPWRD.2025.3626271.
+      </li>
+
+      <li>
+        <strong>Md Fazley Rafy</strong>, Anurag K. Srivastava, Francisco Neto, and John Biasi (2024).
+        <strong>Communication Technologies for DER-centric Power Distribution Systems: A Comparative Analysis and Cyber-Resilience Guidelines.</strong>
+        <em>IEEE Access</em>.
+      </li>
+
+      <li>
+        <strong>Md Fazley Rafy</strong>, E. Otis Boateng, Vignesh Venkata Gopala Krishnan, and Anurag K. Srivastava (2024).
+        <strong>Cyber-Resilient IoT-based Battery Energy Storage Systems in Power Distribution Systems.</strong>
+        <em>IEEE Transactions on Industrial Automation System Journal</em>, Special Issue on Advanced and innovative control technologies
+        for grid-resilience-enhancing energy storage systems.
+      </li>
+
+      <li>
+        Partha S. Sarker, <strong>Md Fazley Rafy</strong>, R. K. Singh, and Anurag K. Srivastava (2023).
+        <strong>Cyber Anomaly-Aware Distributed Voltage Control with Active Power Curtailment and DERs.</strong>
+        <em>IEEE Transactions on Industry Applications</em>.
+      </li>
+
+      <li>
+        <strong>Md Fazley Rafy</strong> (2024).
+        <strong>Real-Time Control and Monitoring of Photovoltaic Arrays Using RTDS and BeagleBoard Technology.</strong>
+        <em>Procedia CIRP</em>, PROCIRP CSI 2024, PROCIR-D-24-00018. (Also listed with arXiv: 2401.08896.)
+      </li>
+
+      <li>
+        <strong>Md Fazley Rafy</strong> (2024).
+        <strong>Artificial Intelligence in Cyber Security.</strong>
+        SSRN (Available at SSRN: abstract 4687831; doi: 10.2139/ssrn.4687831).
+      </li>
+
+      <li>
+        M F Rafy (2020).
+        <strong>Multivariate Statistical analysis and Detection of Chronic Kidney Disease Using Supervised Machine Learning Algorithms.</strong>
+        <em>Walailak Journal of Science and Technology</em>. (As listed in CV.)
+      </li>
+    </ul>
+
+    <h4>Under Review / In Review (Journals)</h4>
+    <ul>
+      <li>
+        P.S. Sarker, <strong>Md Fazley Rafy</strong>, S. Basumallik, and A. K. Srivastava (2025).
+        <strong>Resiliency-driven Restoration for Distribution Systems with IoT-based Demand Response, DERs, and ML-based Loss Estimation.</strong>
+        Manuscript in review, <em>IEEE Transactions on Power Systems</em>.
+      </li>
+    </ul>
+
+    <h4>Submitted (Journals / Special Issues)</h4>
+    <ul>
+      <li>
+        <strong>Md Fazley Rafy</strong>, N. Patari, and Anurag K. Srivastava (2025).
+        <strong>HELIX-DER: Holonic event-aware layered Integration and execution for voltage control in distribution network with DERs.</strong>
+        Manuscript submitted to <em>IEEE Transactions on Cyber Physical Systems</em>.
+      </li>
+
+      <li>
+        <strong>Md Fazley Rafy</strong>, N. Patari, and Anurag K. Srivastava (2025).
+        <strong>Component-Level Disaggregation of Residential Net Meter Data Using a Hybrid Classification and Block Coordinate Descent Framework.</strong>
+        Manuscript submitted to <em>IEEE Transactions on Power Delivery</em>.
+      </li>
+
+      <li>
+        <strong>Md Fazley Rafy</strong>, P. Sharma, N. Patari, Anurag K. Srivastava, and A. Sharma (2025).
+        <strong>Edge-Driven Distributed Control for Power Distribution: A Real-Time Hardware-in-the-Loop Testbed for Industrial Automation and Applications.</strong>
+        Manuscript submitted to <em>IEEE Transactions on Industry Applications</em> (Special Issue on Industrial Automation and Intelligent Process Control — IAPC).
+      </li>
+    </ul>
+
+    <!-- ====================== CONFERENCES ====================== -->
+    <h3>Conferences</h3>
+    <ul>
+      <li>
+        K. Hasan, <strong>Md Fazley Rafy</strong>, and A. K. Srivastava (2025).
+        <strong>Power outage and cause detection using social media: A hybrid architecture with real-time visualization dashboard.</strong>
+        In <em>2025 57th North American Power Symposium (NAPS)</em>. IEEE.
+      </li>
+
+      <li>
+        <strong>Md Fazley Rafy</strong> and A. K. Srivastava (2025).
+        <strong>Adaptive Estimation Architecture for Behind-the-Meter PV Generation with Varying Data Observability in Power Distribution System.</strong>
+        <em>2025 IEEE Industry Applications Society Annual Meeting (IAS)</em>.
+      </li>
+
+      <li>
+        Partha S. Sarker, Subir Majumder, <strong>Md Fazley Rafy</strong>, and Anurag K. Srivastava (2022).
+        <strong>Analyzing Impact of Cyber-Events on Feedback-based Distributed Voltage Control.</strong>
+        Submitted to <em>2022 IEEE International Conference on Power Electronics, Drives and Energy Systems (PEDES)</em>,
+        14–17 December 2022, Jaipur, India.
+      </li>
+
+      <li>
+        M.Z. Islam, M.A.R. Ahad, M.F. Rafy, R. Shameem, M.S. Parvej, M.S. Mim, and A. Mashsharat (2014).
+        <strong>A study of Solar Home System in Bangladesh: Current status, future prospect and constraints.</strong>
+        <em>ICGET</em>, Dhaka, Bangladesh, 2014 (Added to IEEE Xplore). doi: 10.1109/ICGET.2014.6966674.
+      </li>
+    </ul>
+
+    <h4>Submitted (Conferences)</h4>
+    <ul>
+      <li>
+        <strong>Md Fazley Rafy</strong>, I. Davis, and Anurag K. Srivastava (2026).
+        <strong>Battery SOH estimation using Physics-informed neural network with Quantum-Feature mapping.</strong>
+        Manuscript submitted to <em>2026 IEEE Texas Power and Energy Conference (TPEC)</em>, College Station, TX, USA, 2026.
+      </li>
+
+      <li>
+        M.I. Hossain, <strong>Md Fazley Rafy</strong>, S. Solanki, and Anurag K. Srivastava (2026).
+        <strong>Battery SOH estimation using Physics-informed neural network with Quantum-Feature mapping.</strong>
+        Manuscript submitted to <em>2026 IEEE Texas Power and Energy Conference (TPEC)</em>, College Station, TX, USA, 2026.
+      </li>
+
+      <li>
+        M. Hossain, G. Butler, <strong>Md Fazley Rafy</strong>, and Anurag K. Srivastava (2026).
+        <strong>LLM-RAG for Temporal Evidence Graph (TEG) Querying using OT Parser and Rule-based Engine for Operator Support Against cyber-power events in OT Substation Automation System.</strong>
+        Manuscript submitted to <em>2026 IEEE Texas Power and Energy Conference (TPEC)</em>, College Station, TX, USA, 2026.
+      </li>
+    </ul>
+
+    <!-- ====================== BOOK CHAPTERS ====================== -->
+    <h3>Book Chapters</h3>
+    <ul>
+      <li>
+        E. Oti Boateng, M. F. Rafy, P. Sarker, and A. K. Srivastava (2024).
+        <strong>Adaptive Resilience Metrics for DER-Rich Electric Distribution Systems.</strong>
+        In <em>Energy System Resilience and Distributed Generation</em>. Springer Nature Switzerland, pp. 27–67.
+      </li>
+
+      <li>
+        S. Basumallik, M. F. Rafy, S. Konar, and A. K. Srivastava (2024).
+        <strong>Holonic Architecture for Cyber-Power Distribution Grid Monitoring and Operation.</strong>
+        Submitted to Wiley, 2024.
+      </li>
+    </ul>
+
+    <!-- ====================== TASK FORCE REPORTS ====================== -->
+    <h3>Task Force Reports</h3>
+    <p class="muted">
+      Your CV mentions collaboration with an IEEE PES task force (AISR) but does not list specific report titles or citations yet.
+      Add report names/links here when available.
+    </p>
+    <ul>
+      <li><em>To be added (report titles/links not listed in current CV).</em></li>
+    </ul>
+
+    <!-- ====================== POSTERS ====================== -->
+    <h3>Posters</h3>
+    <ul>
+      <li>
+        <strong>Md Fazley Rafy</strong> and Anurag K. Srivastava (2024).
+        <strong>Analyzing Cybersecurity of Distributed Energy Resources (DER) in the Electric Distribution Grid.</strong>
+        2024 Graduate Poster Symposium, 5 April 2024, West Virginia University, Morgantown, WV. (Awarded 2nd Place)
+      </li>
+
+      <li>
+        <strong>Md Fazley Rafy</strong> and Anurag K. Srivastava (2023).
+        <strong>Distributed or Centralized: What Makes the Grid Cyber-Resilient.</strong>
+        2023 IEEE Power &amp; Energy Society (PES) General Meeting (GM), 16–20 July 2023, Orlando, FL.
+      </li>
+
+      <li>
+        <strong>Md Fazley Rafy</strong> and Anurag K. Srivastava (2022).
+        <strong>Analyzing Impact of Cyber-Events on Distributed Optimal Voltage Control.</strong>
+        2022 IEEE Power &amp; Energy Society (PES) General Meeting (GM), 17–21 July 2022, Denver, CO.
+      </li>
+
+      <li>
+        <strong>Md Fazley Rafy</strong> (2020).
+        <strong>Is taking Insulin your new normal; detect your condition.</strong>
+        International poster presentation competition, 29–30 Sep 2020 (NYAB, INYAS, SLAYS, TYSA).
+      </li>
+    </ul>
+
+    <hr style="border:none;border-top:1px solid #e6e6e6;margin:22px 0">
+
+    <p class="muted">
+      If you want, I can also: (1) add clickable DOI/SSRN/arXiv links where available, (2) format everything in a consistent
+      IEEE/APA style, and (3) add a “Selected Publications” section on the top.
+    </p>
+  </main>
+
+  <footer class="footer">
+    <div class="wrap">© <span id="year"></span> Md Fazley Rafy</div>
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
+
