Revise publications and add task force report details
Updated the publications section to include contributions to an IEEE PES task force report, added details for various publications, and ensured consistent formatting.

--- a/publications.html
+++ b/publications.html
@@ -182,13 +182,16 @@
 
     <!-- ====================== TASK FORCE REPORTS ====================== -->
     <h3>Task Force Reports</h3>
-    <p class="muted">
-      Your CV mentions collaboration with an IEEE PES task force (AISR) but does not list specific report titles or citations yet.
-      Add report names/links here when available.
-    </p>
-    <ul>
-      <li><em>To be added (report titles/links not listed in current CV).</em></li>
-    </ul>
+<p class="muted">
+  My work also includes contribution to an IEEE Power &amp; Energy Society (PES) task force report:
+</p>
+<ul>
+  <li>
+    Buettner, A., Lamadrid, A. J., Rahman, A., Chen, B., Nauck, C., Zhao, J., Hatziargyriou, N., Hellmann, F., Li, F., Chen, H., Pang, K., <strong>Rafy, Md Fazley</strong>, Zhang, Q., Lamichhane, S., Lei, S., Manshadi, S., Zhao, S., Hua, W., &amp; Sun, W. (2025).
+    <strong>AI for power system resilience: Resources toward various extreme events and operation issues.</strong>
+    IEEE. (Task Force Report; 51 pages).
+  </li>
+</ul>
 
     <!-- ====================== POSTERS ====================== -->
     <h3>Posters</h3>
@@ -220,10 +223,6 @@
 
     <hr style="border:none;border-top:1px solid #e6e6e6;margin:22px 0">
 
-    <p class="muted">
-      If you want, I can also: (1) add clickable DOI/SSRN/arXiv links where available, (2) format everything in a consistent
-      IEEE/APA style, and (3) add a “Selected Publications” section on the top.
-    </p>
   </main>
 
   <footer class="footer">
@@ -235,5 +234,6 @@
   </script>
 </body>
 </html>
+
 
 
