Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
 
           <h3>Current Highlights</h3>
           <ul>
-            <li>Research Assistant, SG-REAL Lab (WVU): cyber-physical testbeds and resiliency methods for distribution systems :contentReference[oaicite:2]{index=2}</li>
-            <li>Recent publication: “Cyber resilience in solar-rich networked microgrids…” (IEEE TIA, 2025) :contentReference[oaicite:3]{index=3}</li>
-            <li>Mentoring undergraduates (RAP) on ICS security and DER testbed experiments :contentReference[oaicite:4]{index=4}</li>
+            <li>Research Assistant, SG-REAL Lab (WVU): cyber-physical testbeds and resiliency methods for distribution systems</li>
+            <li>Recent publication: “Cyber resilience in solar-rich networked microgrids…” (IEEE TIA, 2025)</li>
+            <li>Mentoring undergraduates (RAP) on ICS security and DER testbed experiments</li>
           </ul>
 
           <h3>Quick Links</h3>
@@ -278,6 +278,7 @@
   </script>
 </body>
 </html>
+
 
 
 
