Revise index.html for personal webpage structure
The HTML file was updated to include the complete structure and content for a personal webpage, including sections for header, navigation, main content, and footer.

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <h2>About</h2>
           <p>
             
-               Md. Fazley Rafy is a power and cyber-physical systems engineer with strong expertise at the intersection of electric power systems, software, and data-driven intelligence. 
+               Md Fazley Rafy is a power and cyber-physical systems engineer with strong expertise at the intersection of electric power systems, software, and data-driven intelligence. 
             He earned his Bachelor’s degree in Electrical and Electronic Engineering from the University of Dhaka in 2017 and completed his PhD in Computer Science at West Virginia University 
             in 2027. His work focuses on smart grid resilience, distributed energy resource (DER) integration, real-time monitoring and control, and cyber-physical security for modern power 
             distribution systems. He has extensive experience developing and validating hardware-in-the-loop (HIL) and cyber-physical testbeds using platforms such as Typhoon HIL, RTDS, 
@@ -278,6 +278,7 @@
   </script>
 </body>
 </html>
+
 
 
 
