Update index.html with recent news section
Added recent news and activities section to the profile.

--- a/index.html
+++ b/index.html
@@ -256,6 +256,16 @@
             <li>Mentoring undergraduates (RAP) on ICS security and DER testbed experiments</li>
           </ul>
 
+          <h3>Recent News/ Activities</h3>
+          <ul>
+            <li>Recieved NSF Travel Grant to attend 2025 Texas Power & Energy Conference at College Station, Texas, USA</li>
+            <li>Received certificate of completion for "Hazing: What You Need to Know" as a member of the <a href="https://greeklife.wvu.edu/prevent-hazing/the-wvu-hazing-prevention-task-force-hazing-prevention-week"
+                                                                                                             target="_blank" rel="noopener">WVU Hazing task force</a></li>
+            <li>More at <a href="news.html" target="_blank" rel="noopener">News</a></li>
+            
+          </ul>
+            
+
           <h3>Quick Links</h3>
           <p class="muted">
             View my <a href="publications.html" target="_blank" rel="noopener">Publications</a> and <a href="projects.html" target="_blank" rel="noopener">Projects</a>.
@@ -278,6 +288,7 @@
   </script>
 </body>
 </html>
+
 
 
 
