--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
           <a class="active" href="index.html">Home</a>
           <a href="publications.html">Publications</a>
           <a href="projects.html">Projects</a>
+          <a href="news.html">News</a>
           <a href="cv.html">CV</a>
           <a href="contact.html">Contact</a>
         </div>
@@ -288,6 +289,7 @@
   </script>
 </body>
 </html>
+
 
 
 
