--- a/news.html
+++ b/news.html
@@ -19,7 +19,7 @@
         <a href="index.html">Home</a>
         <a href="publications.html">Publications</a>
         <a href="projects.html">Projects</a>
-        <a class="active" href="news.html">CV</a>
+        <a class="active" href="news.html">News</a>
         <a href="cv.html">CV</a>
         <a href="contact.html">Contact</a>
       </nav>
