--- a/news.html
+++ b/news.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Publications • Md Fazley Rafy</title>
-  <meta name="description" content="News of Md Fazley Rafy — journals, conferences, book chapters, task force reports, and posters." />
+  <title>News • Md Fazley Rafy</title>
+  <meta name="description" content="News of Md Fazley Rafy — Recent activities, awards, certifications, events etc.." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -13,7 +13,7 @@
     <div class="wrap">
       <div class="brand">
         <h1>Md Fazley Rafy</h1>
-        <p>Publications</p>
+        <p>News</p>
       </div>
       <nav class="nav" aria-label="Primary navigation">
         <a href="index.html">Home</a>
@@ -27,7 +27,7 @@
   </header>
 
   <main class="wrap content">
-    <h2>Publications</h2>
+    <h2>News</h2>
 
         <hr style="border:none;border-top:1px solid #e6e6e6;margin:22px 0">
 
