Update news section with recent achievements
Added news items for 2025 and 2026 in the news section.

--- a/news.html
+++ b/news.html
@@ -28,8 +28,20 @@
 
   <main class="wrap content">
     <h2>News</h2>
+    
+    <hr style="border:none;border-top:1px solid #e6e6e6;margin:22px 0">
 
-        <hr style="border:none;border-top:1px solid #e6e6e6;margin:22px 0">
+    <h3>2026</h3>
+    <ul>
+      <li>Received NSF travel grant for 2026 IEEE TPEC conference in College Station, TX, USA.</li>
+    </ul>
+
+    <h3>2025</h3>
+    <ul>
+      <li>Served as a reviewer for Discover Science Journal paper.</li>
+      <li>Participated in Grid Edge webinar.</li>
+      <li>Submitted a journal paper on Net meter unobservability in IEEE Transactions.</li>
+    </ul>
 
   </main>
 
