--- a/news.html
+++ b/news.html
@@ -39,7 +39,7 @@
     <h3>2025</h3>
     <ul>
       <li>Served as a reviewer for Discover Science Journal paper.</li>
-      <li>Participated in Grid Edge webinar.</li>
+      <li>Webinar on the security perspective of the interconnection between Information Technology (IT), Operational Technology (OT), and Industrial edge devices. More at <a href="https://www.linkedin.com/feed/update/urn:li:activity:7407828003973582848/"></a>here...</li>
       <li>Submitted a journal paper on Net meter unobservability in IEEE Transactions.</li>
     </ul>
 
