Update news.html with recent achievements and reviews

--- a/news.html
+++ b/news.html
@@ -38,9 +38,24 @@
 
     <h3>2025</h3>
     <ul>
-      <li>Served as a reviewer for Discover Science Journal paper.</li>
       <li>Webinar on the security perspective of the interconnection between Information Technology (IT), Operational Technology (OT), and Industrial edge devices. Read more <a href="https://www.linkedin.com/feed/update/urn:li:activity:7407828003973582848/" target="_blank">here...</a></li>
-      <li>Submitted a journal paper on Net meter unobservability in IEEE Transactions.</li>
+      <li> <strong>December:</strong>Submitted a journal paper on Net meter unobservability in IEEE Transactions in Power Delivery.</li>
+      <li><strong>December:</strong> Recognized as a Reviewer for Springer Nature.</li>
+      <li><strong>November:</strong> Served as a reviewer for <em>Scientific Reports</em> (Springer Nature).</li>
+      <li><strong>October:</strong> Recognized as a Reviewer for Springer Nature (multiple manuscripts).</li>
+      <li><strong>September:</strong> Served as a reviewer for <em>Discover Applied Sciences</em> (Springer Nature).</li>
+      <li><strong>September:</strong> Served as a reviewer for <em>Computer Science and Engineering Research</em> (Genesis Publishing).</li>
+      <li><strong>August:</strong> Recognized as a Reviewer for Springer Nature.</li>
+      <li><strong>July:</strong> Served as a reviewer for <em>International Journal of Information Security</em> (Springer Nature).</li>
+      <li><strong>July:</strong> Served as a reviewer for <em>Computer Science and Engineering Research</em> (Genesis Publishing).</li>
+      <li><strong>June:</strong> Completed <strong>DER Edge Security Bootcamp</strong> organized by UND CEM C2SR.</li>
+      <li><strong>March:</strong> Completed <strong>ePWRS 115: Power System Fault</strong> certification by Schweitzer Engineering Laboratories (SEL).</li>
+      <li><strong>January:</strong> Served as a reviewer for <em>Computer Science and Engineering Research</em> (Genesis Publishing).</li>
+      
+    </ul>
+     <h3>2024</h3>
+    <li><strong>October:</strong>Passed "Certified in Cyber Security" exam by ISC2 and became an ISC2 member.</li>
+
     </ul>
 
   </main>
