Enhance projects.html with detailed project information
Updated project details and added technical scope for Solar Testbed Project.

--- a/projects.html
+++ b/projects.html
@@ -25,13 +25,54 @@
 
   <main class="wrap content">
     <h2>Selected Projects</h2>
-    <p class="muted">Each card can link to a detailed project page later (e.g., projects/helix-der.html).</p>
+    <p class="muted">Each card will link to a detailed project page later (e.g., projects/helix-der.html). Appreciate your patience!</p>
 
     <div class="cards">
-      <article class="card">
+      <!-- <article class="card">
         <div class="thumb">Image</div>
         <h3><a href="#">Solar Testbed (DOE/WVHTF)</a></h3>
         <p>PV-based DER-OMS development; cloud tracking and PV generation estimation.</p>
+      </article> -->
+      <article class="card" style="grid-column: span 3;"> 
+        <div class="thumb" style="background-color: #f4f4f4; color: #555;">
+                  </div>
+        
+        <h3>Solar Testbed Project (DOE/WVHTF)</h3>
+        <p><strong>Sponsor:</strong> U.S. DOE Solar Energy Technologies Office (SETO) & High Technology Foundation (DE-EE0010166)</p>
+        <p><strong>Objective:</strong> Research and development to accelerate the deployment of large-scale solar technology in West Virginia using a 1 MW solar generation system at the I-79 Technology Park.</p>
+
+        <details style="margin-top: 1rem; border-top: 1px solid #eee; padding-top: 1rem;">
+          <summary style="cursor: pointer; color: #0077cc; font-weight: bold;">View Project Scope & Publications</summary>
+          
+          <div style="margin-top: 1rem; font-size: 0.95em; line-height: 1.6;">
+            <h4>Technical Scope:</h4>
+            <ul style="padding-left: 20px; margin-bottom: 15px;">
+              [cite_start]<li><strong>DER Monitoring & Visibility:</strong> Leveraging AI/ML and NOAA weather data [cite: 336] to improve visibility and prediction of distributed energy resources.</li>
+              [cite_start]<li><strong>Cyber-Physical Security:</strong> Utilizing AI/ML to detect and mitigate cyber-attacks on power electronic devices (inverters) and solar-storage assets[cite: 338, 443].</li>
+              [cite_start]<li><strong>Resiliency Analysis:</strong> Developing strategies for hybrid solar-plus-storage solutions to improve grid resiliency against natural disasters and cyber threats[cite: 337].</li>
+              [cite_start]<li><strong>Net-Zero Hydrogen:</strong> Investigating efficient strategies for solar-driven hydrogen production via electrolysis[cite: 339].</li>
+            </ul>
+
+            <h4>Associated Publications:</h4>
+            <ul style="list-style-type: none; padding-left: 0;">
+              <li style="margin-bottom: 10px;">
+                <strong>[1]</strong> J. Adan, <strong>Md Fazley Rafy</strong> and A. K. Srivastava (2025). 
+                <em>"Cyber resilience in solar-rich networked microgrids: A real-time end-to-end DER outage management framework."</em> 
+                IEEE Transactions on Industry Applications. doi: 10.1109/TIA.2025.3625887.
+              </li>
+              <li style="margin-bottom: 10px;">
+                <strong>[2]</strong> <strong>Md Fazley Rafy</strong>, N. Patari, Anurag K. Srivastava (2025). 
+                <em>"Component-Level Disaggregation of Residential Net Meter Data Using a Hybrid Classification and Block Coordinate Descent Framework."</em> 
+                Manuscript submitted to IEEE Transactions on Power Delivery.
+              </li>
+              <li style="margin-bottom: 10px;">
+                <strong>[3]</strong> <strong>Md Fazley Rafy</strong>, and A. K. Srivastava (2025). 
+                <em>"Adaptive Estimation Architecture for Behind-the-Meter PV Generation with Varying Data Observability in Power Distribution System."</em> 
+                2025 IEEE Industry Applications Society Annual Meeting (IAS). Taipei, Taiwan, 2025, pp. 1-6, doi: 10.1109/IAS62731.2025.11061660.
+              </li>
+            </ul>
+          </div>
+        </details>
       </article>
 
       <article class="card">
@@ -57,3 +98,4 @@
   </script>
 </body>
 </html>
+
