--- a/projects.html
+++ b/projects.html
@@ -47,10 +47,10 @@
           <div style="margin-top: 1rem; font-size: 0.95em; line-height: 1.6;">
             <h4>Technical Scope:</h4>
             <ul style="padding-left: 20px; margin-bottom: 15px;">
-              [cite_start]<li><strong>DER Monitoring & Visibility:</strong> Leveraging AI/ML and NOAA weather data [cite: 336] to improve visibility and prediction of distributed energy resources.</li>
-              [cite_start]<li><strong>Cyber-Physical Security:</strong> Utilizing AI/ML to detect and mitigate cyber-attacks on power electronic devices (inverters) and solar-storage assets[cite: 338, 443].</li>
-              [cite_start]<li><strong>Resiliency Analysis:</strong> Developing strategies for hybrid solar-plus-storage solutions to improve grid resiliency against natural disasters and cyber threats[cite: 337].</li>
-              [cite_start]<li><strong>Net-Zero Hydrogen:</strong> Investigating efficient strategies for solar-driven hydrogen production via electrolysis[cite: 339].</li>
+              <li><strong>DER Monitoring & Visibility:</strong> Leveraging AI/ML and NOAA weather data to improve visibility and prediction of distributed energy resources.</li>
+              <li><strong>Cyber-Physical Security:</strong> Utilizing AI/ML to detect and mitigate cyber-attacks on power electronic devices (inverters) and solar-storage assets.</li>
+              <li><strong>Resiliency Analysis:</strong> Developing strategies for hybrid solar-plus-storage solutions to improve grid resiliency against natural disasters and cyber threats.</li>
+              <li><strong>Net-Zero Hydrogen:</strong> Investigating efficient strategies for solar-driven hydrogen production via electrolysis.</li>
             </ul>
 
             <h4>Associated Publications:</h4>
@@ -98,4 +98,5 @@
   </script>
 </body>
 </html>
+
 
