Update index.html with additional logo and profile info
Added a second university logo to the header and updated the profile information.

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
         <!-- Replace with your university logo file -->
         <div class="logo-box" aria-label="University logo placeholder">
           <img src="assets/wvu-logo.png" alt="West Virginia University" />
+          <img src="assets/du_logo.png" alt="DU Logo" style="margin-left: 20px;" />
           <!-- <span class="muted">University logo</span> -->
         </div>
       </div>
@@ -289,6 +290,7 @@
   </script>
 </body>
 </html>
+
 
 
 
