Restore index.html with original content
Restored the index.html file with original content, including metadata, styles, and layout for the personal webpage of Md Fazley Rafy.

--- a/index.html
+++ b/index.html
@@ -170,9 +170,10 @@
         </div>
 
         <!-- Replace with your university logo file -->
-        <div class="logo-box" aria-label="University logo placeholder">
-          <img src="assets/wvu-logo.png" alt="West Virginia University" />
-          <img src="assets/du_logo.png" alt="DU Logo" style="margin-left: 20px;" />
+        <!-- <div class="logo-box" aria-label="University logo placeholder"> -->
+        <div class="logo-box" aria-label="University logos" style="display: flex; align-items: center;">
+          <img src="assets/wvu-logo.png" alt="West Virginia University" style="height: 50px; width: auto;"/>
+          <img src="assets/du_logo.png" alt="Dhaka University" style="height: 50px; width: auto; margin-left: 20px;" />
           <!-- <span class="muted">University logo</span> -->
         </div>
       </div>
@@ -290,6 +291,7 @@
   </script>
 </body>
 </html>
+
 
 
 
