Refactor projects.html for improved structure

--- a/projects.html
+++ b/projects.html
@@ -75,10 +75,57 @@
         </details>
       </article>
 
-      <article class="card">
+      <!-- <article class="card">
         <div class="thumb">Image</div>
         <h3><a href="#">US-India UI-ASSIST</a></h3>
         <p>Testbed, applications, and tools for microgrids/active distribution systems with cyber-security measures.</p>
+      </article> -->
+      <article class="card" style="grid-column: span 3;"> 
+        <div class="thumb" style="background-color: #f4f4f4; color: #555;">
+                  </div>
+        
+        <h3>US-India UI-ASSIST (DOE/IUSSTF)</h3>
+        <p><strong>Sponsor:</strong> U.S. DOE & Indo-US Science and Technology Foundation (Award DE-IA0000025)</p>
+        <p><strong>Objective:</strong> A collaborative R&D effort between 30 US and Indian entities to bridge the gap between smart grid, energy storage, and renewable energy research, facilitating adoption in distribution system operation and planning.</p>
+
+        <details style="margin-top: 1rem; border-top: 1px solid #eee; padding-top: 1rem;">
+          <summary style="cursor: pointer; color: #0077cc; font-weight: bold;">View Project Scope & Publications</summary>
+          
+          <div style="margin-top: 1rem; font-size: 0.95em; line-height: 1.6;">
+            <h4>Technical Scope (WVU Team):</h4>
+            <p style="margin-bottom: 10px;">My work at West Virginia University focused on:</p>
+            <ul style="padding-left: 20px; margin-bottom: 15px;">
+              <li><strong>Microgrid & Active Distribution:</strong> Developing primary/secondary controllers, protection mechanisms, and novel converter topologies for AC/DC microgrids.</li>
+              <li><strong>Cyber-Security:</strong> Creating cyber-physical analysis tools and security measures for smart operations with high DER penetration.</li>
+              <li><strong>DSO Functions & ADMS:</strong> Integrating DER control with Advanced Distribution Management Systems (ADMS) and Microgrid Management Systems.</li>
+              <li><strong>Lab Validation:</strong> Developing real-time HIL (Hardware-in-the-Loop) testbeds for validating concepts before field deployment.</li>
+            </ul>
+
+            <h4>Associated Publications:</h4>
+            <ul style="list-style-type: none; padding-left: 0;">
+              <li style="margin-bottom: 10px;">
+                <strong>[1]</strong> <strong>Md Fazley Rafy</strong>, Anurag K. Srivastava, Francisco Neto, John Biasi (2024). 
+                <em>"Communication Technologies for DER-centric Power Distribution Systems: A Comparative Analysis and Cyber-Resilience Guidelines."</em> 
+                IEEE Access. doi: 10.1109/ACCESS.2024.3408164.
+              </li>
+              <li style="margin-bottom: 10px;">
+                <strong>[2]</strong> Partha S. Sarker, Subir Majumder, <strong>Md Fazley Rafy</strong>, Anurag K. Srivastava (2022). 
+                <em>"Impact Analysis of Cyber-Events on Distributed Voltage Control with Active Power Curtailment."</em> 
+                2022 IEEE International Conference on Power Electronics, Drives and Energy Systems (PEDES). doi: 10.1109/PEDES56012.2022.10080183.
+              </li>
+              <li style="margin-bottom: 10px;">
+                <strong>[3]</strong> Partha S. Sarker, <strong>Md Fazley Rafy</strong>, R.K. Singh, Anurag K. Srivastava (2023). 
+                <em>"Cyber Anomaly-Aware Distributed Voltage Control with Active Power Curtailment and DERs."</em> 
+                IEEE Transactions on Industry Applications. doi: 10.1109/TIA.2023.3328850.
+              </li>
+              <li style="margin-bottom: 10px;">
+                <strong>[4]</strong> Partha S. Sarker, <strong>Md Fazley Rafy</strong>, Anurag K. Srivastava (2025). 
+                <em>"Enabling Cyber-resilient Distribution Systems with DERs: Distributed vs. Centralized Control."</em> 
+                IEEE Transactions on Power Delivery. doi: 10.1109/TPWRD.2025.3626271.
+              </li>
+            </ul>
+          </div>
+        </details>
       </article>
 
       <article class="card">
@@ -98,5 +145,6 @@
   </script>
 </body>
 </html>
+
 
 
