Refactor index.html layout and styling
Updated the index.html file to improve layout and styling, including adjustments to the logo box size and added padding.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       font-size:14px;
     }
     .logo-box{
-      width:220px;
+      width:300px;
       max-width:40vw;
       height:48px;
       border:1px dashed #bbb;
@@ -65,6 +65,7 @@
       justify-content:center;
       background:#fff;
       overflow:hidden;
+      padding: 0 10px;
     }
     .logo-box img{max-height:44px; max-width:210px}
 
@@ -291,6 +292,7 @@
   </script>
 </body>
 </html>
+
 
 
 
